#Configuración básica
AC_PREREQ([2.69])
AC_INIT([holamundo], [1.0], [deivirivera300@gmail.com])
AM_INIT_AUTOMAKE([foreign])

# Comprobación de herramientas
AC_PROG_CC

# Archivos de cabecera
AC_CONFIG_HEADERS([config.h])

# Especificar qué archivos se deben generar
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
